--- a/config.yaml
+++ b/config.yaml
@@ -1,9 +1,19 @@
 ---
-cog_bundle_version: 3
+cog_bundle_version: 4
 
 name: heroku
-version: 0.0.1
-description: Interact with heroku
+version: 0.0.2
+description: Manage heroku apps and organizations
+long_description: |
+  This bundle provides functionality similar to the heroku toolbelt. In fact,
+  it actually uses the same underlying ruby library, so the data returned will
+  look familiar.
+
+  All commands will require credentials which can be provided by setting them
+  with dynamic config. You must set either HEROKU_API_KEY or both
+  HEROKU_USERNAME and HEROKU_PASSWORD.
+author: Patrick Van Stee <patrick@operable.io>
+homepage: https://github.com/cogcmd/heroku
 docker:
   image: cogcmd/heroku
   tag: 0.0.1
@@ -15,20 +25,40 @@ commands:
   app:
     executable: /home/bundle/cog-command
     description: List and display info about apps
-    documentation: |
-      heroku:app
-      heroku:app list - List all apps
-      heroku:app info <app> - Display details about an app
+    arguments: "[list | info <app>]"
+    subcommands:
+      list: List all apps (default)
+      "info <app>": Display details about an app
+    examples: |
+      List all apps:
+
+        heroku:app list
+
+      View details about a specific app:
+
+        heroku:app info frosty-mountain-7639
     rules:
       - must have heroku:read
   config:
     executable: /home/bundle/cog-command
     description: List and modify environment variables for an app
-    documentation: |
-      heroku:config [--app app]
-      heroku:config list [--app app] - List all environment variables
-      heroku:config set <name=value> [--app app] - Set an environment variable
-      heroku:config unset <name> [--app app] - Unset an environment variable
+    arguments: "[list | set <name=value> | unset <name>]"
+    subcommands:
+      list: List all environment variables
+      set: Set an environment variable
+      unset: Unset an environment variable
+    examples: |
+      List all environment variables:
+
+        heroku:config --app frosty-mountain-7639
+
+      Set a new environment variable:
+
+        heroku:config set LOG_LEVEL=warn --app frosty-mountain-7639
+
+      Unset a new environment variable:
+
+        heroku:config unset DEBUG --app frosty-mountain-7639
     rules:
       - must have heroku:admin
       - must have heroku:read
@@ -41,11 +71,23 @@ commands:
   ps:
     executable: /home/bundle/cog-command
     description: List and modify processes of an app
-    documentation: |
-      heroku:ps [--app app]
-      heroku:ps list [--app app] - List all running processes
-      heroku:ps scale [--app app] - Change number of running processes
-      heroku:ps restart [--app app] - Restart processes
+    arguments: "[list | scale <dyno=amount> ... | restart <dyno>]"
+    subcommands:
+      list: List all processes (default)
+      "scale <dyno=amount> ...": Scale dynos to the specified amount
+      "restart <dyno>": Restart a dyno
+    examples: |
+      List all processes:
+
+        heroku:ps --app frosty-mountain-7639
+
+      Scale up the web and api processes:
+
+        heroku:ps scale web=4 api=8 --app frosty-mountain-7639
+
+      Restart the web.1 process:
+
+        heroku:ps restart web.1 --app frosty-mountain-7639
     rules:
       - must have heroku:read
       - with arg[0] == 'scale' must have heroku:write
@@ -57,11 +99,23 @@ commands:
   release:
     executable: /home/bundle/cog-command
     description: List and rollback to older releases
-    documentation: |
-      heroku:release
-      heroku:release list [--app app] - List all releases
-      heroku:release info [--app app] - Display details about a release
-      heroku:release rollback [--app app] - Rollback the app to a previous release
+    arguments: "[list | info <release> | rollback <release>]"
+    subcommands:
+      list: List all releases
+      "info <release>": Display details about a release
+      "rollback <release>": Rollback the app to a previous release
+    examples: |
+      List all releases:
+
+        heroku:release list --app frosty-mountain-7639
+
+      Look at a release:
+
+        heroku:release info v285 --app frosty-mountain-7639
+
+      Rollback to an older release:
+
+        heroku:release rollback v284 --app frosty-mountain-7639
     rules:
       - must have heroku:read
       - with arg[0] == 'rollback' must have heroku:write
@@ -71,12 +125,24 @@ commands:
         required: true
   user:
     executable: /home/bundle/cog-command
-    description: List and rollback to older releases
-    documentation: |
-      heroku:user
-      heroku:user list [--app app] - List all users
-      heroku:user add [--app app] - Add user by email
-      heroku:user remove [--app app] - Remove user by email
+    description: List and manage organization membership
+    arguments: "[list | add <email> | remove <email>]"
+    subcommands:
+      list: List all users
+      "add <email>": Add user by email
+      "remove <email>": Remove user by email
+    examples: |
+      List all users:
+
+        heroku:user list --app frosty-mountain-7639
+
+      Add a new user:
+
+        heroku:user add matt@operable.io --app frosty-mountain-7639
+
+      Remove an existing user:
+
+        heroku:user add mark@operable.io --app frosty-mountain-7639
     rules:
       - must have heroku:read
       - with arg[0] == 'add' must have heroku:write
